--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <li><a href="www.yahoo.com">Yahoo</a></li>
           <li><a href="www.bing.com">Bing</a></li>
         </ul>
-        <a id="login" href="login.html">Login</a> </nav>
+        </nav>
+        <a id="login" href="login.html">Login</a> 
     </header>
     <main>
         <h2>Required Features for Index page:</h2>
